--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "check": "npm run typecheck && npm run lint",
+    "test": "vitest run",
+    "test:ds": "vitest run --project ds",
+    "test:domain": "vitest run --project domain",
+    "test:sb": "vitest run --project storybook",
+    "test:watch": "vitest --project ds --watch",
+    "coverage": "vitest run --project ds --coverage",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -20,15 +31,36 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.1.3",
+    "@storybook/addon-docs": "^9.1.3",
+    "@storybook/addon-themes": "^9.1.3",
+    "@storybook/addon-vitest": "^9.1.3",
+    "@storybook/nextjs-vite": "^9.1.3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "eslint-plugin-storybook": "^9.1.3",
+    "jsdom": "^26.1.0",
+    "playwright": "^1.55.0",
+    "storybook": "^9.1.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
+  },
+  "engines": {
+    "node": "22.12.0"
   }
 }
